--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "intermediate-redux",
+  "home": "https://nimaiwalsh.github.io/portofolio-2017-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -11,9 +13,12 @@
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.75.1"
+    "semantic-ui-react": "^0.75.1",
+    "twitter": "^1.7.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
