started working on project cards

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
+    "request": "^2.83.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
     "twitter": "^1.7.1"
