--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3",
     "request": "^2.83.0",
     "semantic-ui-css": "^2.2.12",
